--- a/extensions.conf.sample
+++ b/extensions.conf.sample
@@ -2,6 +2,9 @@ exten = 6500,1,verbose(1, "User ${CALLERID(num)} dialed extension 6500. Testing 
  same = n,noop(CHANNEL(audioreadformat) : ${CHANNEL(audioreadformat)})
  same = n,answer
  same = n,execif($[ "${CHANNEL(audioreadformat)}" = "opus" ]?set(EAGI_AUDIO_FORMAT=slin48):noop(Won't set EAGI_AUDIO_FORMAT))
+ ; Usage : eagi(transcribeWithGoogle.eagi,<language>,<timeout>)
+ ; <language> : en-US, fr-FR, etc.
+ ; <timeout>  : the time to record audio input, in seconds
  same = n,eagi(transcribeWithGoogle.eagi,fr-FR,2)
  same = n,noop(GOOGLE_TRANSCRIPTION_RESULT : ${GOOGLE_TRANSCRIPTION_RESULT})
  same = n,hangup()
